# SQMiniApp

./: CMakeLists.txt  README.md  makefile
src/: a4a.out  ilsdft.h  lsdft.h  lsdft_initObjs.cc  lsdft_matvec.cc  lsdft_nl.cc  lsdft_readfiles.cc  lsdft_scf.cc  lsdft_tools.cc  main.cc
test/: Mg1.inpt  Mg1.ion  Mg1.relax  a.out  a1.out  a2.out  a4.out  a4a.out  a6.out  job.lsf  readme
test/pseudopotential/: psd_Mg.pot  readme
